--- a/SemanaNLW2/styles/main.css
+++ b/SemanaNLW2/styles/main.css
@@ -19,7 +19,7 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    font-size: 60%;  
+    font-size: 60%;  /*16px-1rem-100%*/
 }
 
 
@@ -62,3 +62,15 @@ textarea{
     width: 90vw; 
     max-width: 700px; 
 }
+
+
+
+@media (min-width: 700px) {
+
+:root {
+
+    font-size: 62.5%;
+}
+
+}
+
