--- a/SemanaNLW2/styles/partials/page-landing.css
+++ b/SemanaNLW2/styles/partials/page-landing.css
@@ -1,8 +1,4 @@
-:root {
 
-    font-size: 40%;
-
-}
 
 #page-landing {
     background: var(--color-primary);
@@ -97,18 +93,68 @@
     margin-left: 0.8rem;
 }
 
-@media (min-width: 1100px) {
+
+ @media (max-height: 450px) {
+
+    
+    :root {
+        font-size: 40%;
+    }
+
+    .hero-image {
+        height: 30rem;
+    }
+
+    .logo-container img {
+        height: 10rem;
+    }
+
+    .logo-container h2 {
+        font-weight: 500;
+        font-size: 2.6rem;
+        line-height: 4.6rem;
+        margin-top: 0.8rem;
+    }
+    .buttons-container a {
+        width: 28rem;
+        height: 8.4rem;
+        border-radius: 0.8rem;
+        margin-right: 1.6rem;
+        font: 700 2.4rem Archivo;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--color-button-text);
+        transition: 0.2s;
+    }
+
+    html, body {
+        height: 150vh;
+    }
+
+} 
+
+@media ( max-width: 699px ) {
+    :root {
+        font-size: 40%;
+    }
+}
+
+
+
+@media (min-width: 1100px) { 
 
     #page-landing #conteiner{
         min-width: 1100px;
-        display: grid; 
-        grid-template-columns: 2fr 1fr 2fr; 
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
         grid-template-rows: 350px 1fr;
         grid-template-areas: 
         "proffy imagem imagem" 
         "button button texting";
-        gap: 60px;
-        
+        column-gap: 87px;
+        row-gap: 86px;
     }
 
     .logo-conteiner {
@@ -136,7 +182,8 @@
     .total-connetions {
 
         grid-area: texting;
-        justify-content: flex-end;
+        justify-self: end;
+        font-size: 1.7rem;
 
     }
 }
