--- a/SemanaNLW2/styles/partials/page-landing.css
+++ b/SemanaNLW2/styles/partials/page-landing.css
@@ -4,7 +4,7 @@
     background: var(--color-primary);
 }
 
-#page-landing #conteiner {
+#page-landing #container {
     color: var(--color-text-in-primary);
 }
 
@@ -145,7 +145,7 @@
 
 @media (min-width: 1100px) { 
 
-    #page-landing #conteiner{
+    #page-landing #container{
         min-width: 1100px;
         display: grid;
         grid-template-columns: 2fr 1fr 2fr;
