--- a/SemanaNLW2/public/styles/partials/page-study.css
+++ b/SemanaNLW2/public/styles/partials/page-study.css
@@ -101,7 +101,7 @@ main article {
     border: 1px solid var(--color-line-in-white);
 }
 
-.teacher-item footer button {
+.teacher-item footer .button {
     width: 20rem;
     height: 5.6rem;
     
@@ -123,7 +123,7 @@ main article {
     transition: background 0.2s;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer .button:hover {
     background: var(--color-secondary-dark);
 }
 
