--- a/SemanaNLW2/src/views/give-classes.html
+++ b/SemanaNLW2/src/views/give-classes.html
@@ -7,6 +7,8 @@
             
             <title>proffy | Sua plataforma de estudos</title>
 
+            <link rel="shotcut icon" href="/images/favicon.png" type="image/png">
+            
             <link rel="stylesheet" href="/styles/main.css">
             <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
             <link rel="stylesheet" href="/styles/partials/header.css">
