--- a/SemanaNLW2/src/views/give-classes.html
+++ b/SemanaNLW2/src/views/give-classes.html
@@ -43,7 +43,7 @@
 
                 <main>
 
-                    <form action="" id="create-class">
+                    <form action="/save-classes" id="create-class" method="POST"> <!-- method e o formato que o html irar enviar o formulario, por padrao o metodo e GET,mas ao utilizar o POST, os dados nao iram mais aparecer na url, mas ao utilizar o POST deve configurar no server -->
 
                         <fieldset >
                              <legend>Seus dados</legend>
