--- a/portal_noticias/app/views/admin/formulario_inclusao_noticia.ejs
+++ b/portal_noticias/app/views/admin/formulario_inclusao_noticia.ejs
@@ -6,13 +6,13 @@
 		<title>Portal de notícias</title>
 		
 		<!-- JQuery -->
-		<script src="../../../../js/jquery-2.2.1.js"></script>
+		<script src="js/jquery-2.2.1.js"></script>
 
 		<!-- bootstrap - link cdn -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	
 		<!-- incluindo css -->
-		<link href="../../../../css/style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 
 		<!-- favicon -->
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -35,7 +35,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="portal_noticias">HOME</a></li>
 					</ul>
 				</div>
 			</div>
