--- a/portal_noticias/app/views/home/index.ejs
+++ b/portal_noticias/app/views/home/index.ejs
@@ -35,7 +35,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="/portal_noticias">HOME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -44,37 +44,22 @@
 
 	    <div class="container">
 	    	<div class="row">
-	    		<div class="col-md-12">
+	    		<div class="col-md-8">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    				Aqui fica o resumo da notícia principal da página com um limite de 100 caracteres!
 		    			</p>
 		    		</div>
 		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
 
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
+	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 
 		    			<br />
@@ -86,10 +71,10 @@
 	    	</div>
 
 	    	<div class="row">
-	    		<div class="col-md-12">
+	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 		    			<br />
 		    			<p class="noticia_resumo">
@@ -97,12 +82,11 @@
 		    			</p>
 		    		</div>
 		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
+
+	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 
 		    			<br />
@@ -111,12 +95,11 @@
 		    			</p>
 		    		</div>
 		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
+
+	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 
 		    			<br />
@@ -126,7 +109,11 @@
 		    		</div>
 		    	</div>
 	    	</div>
-			
+
+	    	<div class="row ver_mais">
+	    		<button type="button" class="btn btn-default"><a href="/noticias">Ver todas as notícias</a></button>
+	    	</div>
+
 	    </div>
 	
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
