--- a/portal_noticias/app/views/noticias/noticia.ejs
+++ b/portal_noticias/app/views/noticias/noticia.ejs
@@ -35,7 +35,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="/portal_noticias">HOME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -47,7 +47,7 @@
 	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia/1" class="noticia_titulo">Título da notícia</a>
+		    			<a href="noticia/1" class="noticia_titulo">Título da notícia MUDAR O HREF</a>
 		    			<span class="noticia_data">07/09/2016</span>
 		    			<br />
 		    			<p class="noticia_resumo">
