--- a/portal_noticias/app/views/home/index.ejs
+++ b/portal_noticias/app/views/home/index.ejs
@@ -46,25 +46,24 @@
 	    	<div class="row">
 	    		<div class="col-md-8">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
+		    			<span class="noticia_autor"><%= ultNoticias[0].autor%></span>
+		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[0].titulo%></a>
+		    			<span class="noticia_data"><%= ultNoticias[0].data_noticia%></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia principal da página com um limite de 100 caracteres!
+		    				<%= ultNoticias[0].resumo%>
 		    			</p>
 		    		</div>
 		    	</div>
 
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
+		    			<span class="noticia_autor"><%= ultNoticias[1].autor%></span>
+		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[1].titulo%></a>
+		    			<span class="noticia_data"><%= ultNoticias[1].data_noticia%></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    				<%= ultNoticias[1].resumo%>
 		    			</p>
 		    		</div>
 		    	</div>
@@ -73,38 +72,36 @@
 	    	<div class="row">
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
+		    			<span class="noticia_autor"><%= ultNoticias[2].autor%></span>
+		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[2].titulo%></a>
+		    			<span class="noticia_data"><%= ultNoticias[2].data_noticia%></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    				<%= ultNoticias[2].resumo%>
 		    			</p>
 		    		</div>
 		    	</div>
 
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
+		    			<span class="noticia_autor"><%= ultNoticias[3].autor%></span>
+		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[3].titulo%></a>
+		    			<span class="noticia_data"><%= ultNoticias[3].data_noticia%></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    				<%= ultNoticias[3].resumo%>
 		    			</p>
 		    		</div>
 		    	</div>
 
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
+		    			<span class="noticia_autor"><%= ultNoticias[4].autor%></span>
+		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[4].titulo%></a>
+		    			<span class="noticia_data"><%= ultNoticias[4].data_noticia%></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    				<%= ultNoticias[4].resumo%>
 		    			</p>
 		    		</div>
 		    	</div>
