--- a/portal_noticias/app/views/admin/formulario_inclusao_noticia.ejs
+++ b/portal_noticias/app/views/admin/formulario_inclusao_noticia.ejs
@@ -43,44 +43,47 @@
 
 
 	    <div class="container">
-		
-			<div class="row">
-				<div class="col-md-12">
-					<div class="alert alert-danger">
-						<strong>Atenção!</strong>
-						<ul>
-							<li>Título é obrigatório</li>
-							<li>Resumo é obrigatório</li>
-						</ul>
+			<%if(errors){ %>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="alert alert-danger">
+								
+							<strong>Atenção!</strong>
+							<ul>
+								<% errors.forEach(e =>{ %>
+									<li><%= e.msg %></li>
+								<% }) %>
+							</ul>
+						</div>
 					</div>
 				</div>
-			</div>
+			<% } %>
 	    	<div class="row">
 	    		<div class="col-md-12">
-	    			<form>
+	    			<form action="/noticias/salvar" method="post">
 						<div class="form-group">
 							<label for="titulo">Título:</label>
-							<input type="text" class="form-control" id="titulo" name="titulo">
+							<input type="text" class="form-control" id="titulo" name="titulo" value="<%= dadoNoti.titulo%>">
 						</div>
 
 						<div class="form-group">
 							<label for="pwd">Resumo:</label>
-							<input type="text" class="form-control" id="resumo" name="resumo">
+							<input type="text" class="form-control" id="resumo" name="resumo" value="<%= dadoNoti.resumo%>">
 						</div>
 						
 						<div class="form-group">
 							<label for="pwd">Autor:</label>
-							<input type="text" class="form-control" id="autor" name="autor">
+							<input type="text" class="form-control" id="autor" name="autor" value="<%= dadoNoti.autor%>">
 						</div>
 
 						<div class="form-group">
 							<label for="pwd">Data:</label>
-							<input type="date" class="form-control" id="data_noticia" name="data_noticia">
+							<input type="date" class="form-control" id="data_noticia" name="data_noticia" value="<%= dadoNoti.data_noticia%>">
 						</div>
 
 						<div class="form-group">
 							<label for="pwd">Notícia:</label>
-							<textarea class="form-control" id="noticia" name="noticia"></textarea>
+							<textarea class="form-control" id="noticia" name="noticia"><%= dadoNoti.noticia%></textarea>
 						</div>
 
 
