--- a/portal_noticias/app/views/home/index.ejs
+++ b/portal_noticias/app/views/home/index.ejs
@@ -70,41 +70,25 @@
 	    	</div>
 
 	    	<div class="row">
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor"><%= ultNoticias[2].autor%></span>
-		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[2].titulo%></a>
-		    			<span class="noticia_data"><%= ultNoticias[2].data_noticia%></span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				<%= ultNoticias[2].resumo%>
-		    			</p>
-		    		</div>
-		    	</div>
 
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor"><%= ultNoticias[3].autor%></span>
-		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[3].titulo%></a>
-		    			<span class="noticia_data"><%= ultNoticias[3].data_noticia%></span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				<%= ultNoticias[3].resumo%>
-		    			</p>
-		    		</div>
-		    	</div>
+				<% ultNoticias.forEach( (ultNoti,index) =>{ %>
+					<% if(index > 1) {%>
+						<div class="col-md-4">
+							<div class="noticia_wrapper">
+								<span class="noticia_autor"><%= ultNoti.autor%></span>
+								<a href="/noticia" class="noticia_titulo"><%= ultNoti.titulo%></a>
+								<span class="noticia_data"><%= ultNoti.data_noticia%></span>
+								<br />
+								<p class="noticia_resumo">
+									<%= ultNoti.resumo%>
+								</p>
+							</div>
+						</div>
 
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor"><%= ultNoticias[4].autor%></span>
-		    			<a href="/noticia" class="noticia_titulo"><%= ultNoticias[4].titulo%></a>
-		    			<span class="noticia_data"><%= ultNoticias[4].data_noticia%></span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				<%= ultNoticias[4].resumo%>
-		    			</p>
-		    		</div>
-		    	</div>
+					<% } %>
+
+				<% }) %>
+
 	    	</div>
 
 	    	<div class="row ver_mais">
