--- a/portal_noticias/app/views/noticias/noticias.ejs
+++ b/portal_noticias/app/views/noticias/noticias.ejs
@@ -43,89 +43,23 @@
 
 
 	    <div class="container">
-	    	<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-	    	</div>
-
-	    	<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-			</div>
-			<div class="row">
-	    		<div class="col-md-12">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="/noticia" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-	    	</div>
+			<% if(noticias) { %>	
+				<% noticias.forEach( n =>{ %>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="noticia_wrapper">
+								<span class="noticia_autor"><%= n.autor%></span>
+								<a href="noticia?id_noticia=<%= n.id_noticia%>" class="noticia_titulo"><%= n.titulo%></a>
+								<span class="noticia_data"><%= n.data_noticia%></span>
+								<br />
+								<p class="noticia_resumo">
+									<%= n.resumo%>
+								</p>
+							</div>
+						</div>
+					</div>
+				<% })%>
+			<% } %>
 			
 	    </div>
 	
