--- a/mmorpg_got_arquivos_do_projeto/app/views/admin/cadastro.ejs
+++ b/mmorpg_got_arquivos_do_projeto/app/views/admin/cadastro.ejs
@@ -22,36 +22,46 @@
 			<div class="container">
 				<form class="form-inline form-entrar">
 					<div class="form-group">				
-						<button type="button" class="btn btn-success">Voltar</button>
+						<button type="button" onclick="window.location.href = '/'" class="btn btn-success">Voltar</button>
 					</div>
 				</form>
+
+				<% if(errors) {%>
+					<div class="alert alert-danger">
+						<ul>
+							<% errors.forEach( e =>{ %>
+								<li><%= e.msg%></li>
+							<% }) %>
+						</ul>
+					</div>
+				<% } %>
 			</div>
 			
 		</nav>
 
 	    <div class="container">
 	    		
-			<form class="form-cadastro">
+			<form class="form-cadastro" action="/cadastrar" method="post">
 			
 				<div class="row">
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="nome" class="col-sm-2 col-form-label">Nome</label>
-							<input type="nome" class="form-control" id="nome" placeholder="Nome">
+							<input type="nome"  value="<%= dadosUsuario.nome%>" name="nome" class="form-control" id="nome" placeholder="Nome">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="usuario" class="col-sm-2 col-form-label">Usuário</label>
-							<input type="usuario" class="form-control" id="usuario" placeholder="Usuário">
+							<input type="usuario" value="<%= dadosUsuario.usuario%>" name="usuario"class="form-control" id="usuario" placeholder="Usuário">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="senha" class="col-sm-2 col-form-label">Senha</label>
-							<input type="password" class="form-control" id="senha" placeholder="Password">
+							<input type="password" name="senha" class="form-control" id="senha" placeholder="Password">
 						</div>
 					</div>
 				</div>
