--- a/mmorpg_got_arquivos_do_projeto/app/views/home/index.ejs
+++ b/mmorpg_got_arquivos_do_projeto/app/views/home/index.ejs
@@ -14,18 +14,37 @@
 		<!-- incluindo css -->
 		<link href="css/style.css" rel="stylesheet">
 
+		<script>
+
+			$(document).ready(()=>{
+				$("#btn-cadastro").click(()=>{
+
+					window.location.href = "http://localhost/cadastro"
+				})
+			})
+		</script>
 	</head>
 
 	<body class="body-index">
 
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container">
-				<form class="form-inline form-entrar">
+				
+				<form class="form-inline form-entrar" action="/autentificar" method="post">
+					<% if(errors) {%>
+						<div class="alert alert-danger">
+							<ul>
+								<% errors.forEach( e =>{ %>
+									<li><%= e.msg%></li>
+								<% }) %>
+							</ul>
+						</div>
+					<% } %>
 					<div class="form-group">				
-						<input type="text" name="usuario" id="usuario" placeholder="Usuário" class="form-control" autocomplete="off" />
+						<input type="text" value="<%= dadosUsuario.usuario%>" name="usuario" id="usuario" placeholder="Usuário" class="form-control" autocomplete="off" />
 						<input type="password" name="senha" id="senha" placeholder="Senha" class="form-control" />
-						<button type="button" class="btn btn-success">Entrar</button>
-						<button type="button" class="btn btn-info">Cadastro</button>
+						<button type="submit" class="btn btn-success">Entrar</button>
+						<button type="button" id="btn-cadastro" class="btn btn-info">Cadastro</button>
 					</div>
 				</form>
 			</div>
