--- a/mmorpg_got_arquivos_do_projeto/app/views/jogo/pergaminhos.ejs
+++ b/mmorpg_got_arquivos_do_projeto/app/views/jogo/pergaminhos.ejs
@@ -1,10 +1,20 @@
 <div id="pergaminhos">					
 	<h3>Pergaminhos</h3>
 	
+
+
 	<ul>
-		<li>1 enforcamento(s) programado - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>2 aldeão(ões) em treinamento de magia - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>1 aldeão(ões) em treinamento de história - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>5 aldeão(ões) coletando recursos - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
+		<% if(ordens) {%>
+			<%ordens.forEach( o => { %>
+				<%
+					<!-- tempo real -->
+					let timeR = new Date().getTime()
+					<!-- tempo final em segundos -->
+					let timeFS = o.tempoFinalOrdem - timeR
+					timeFS = timeFS/1000
+				%>
+			<li><%= o.quant_aldeoes%> aldeão(ões) <%= o.descOrdem%> - <small>restam <span class="tempo_restante">9</span> segundos - <a href="/revogar-ordem?_id=<%= o._id%>">revogar ordem</a> </small></li>
+			<% }) %>
+		<% } %>	
 	</ul>
 </div>
